detalles del disenio

--- a/Dados/app/src/main/res/values/strings.xml
+++ b/Dados/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="numeroUsuario_String">10</string>
     <string name="buttonjugar_String">Play</string>
 
-    <string name="CPU_String">CPU</string>
+    <string name="CPU_String">TRAGA MONEDAS</string>
     <string name="numeroAleatorio_String">1   -   10</string>
 
     <string name="buttonSalir_String">Salir</string>
